1~2회차/JS 복습과제/2.캐러셀/캐러셀.html

--- a/1~2회차/JS 복습과제/2.캐러셀/캐러셀.html
+++ b/1~2회차/JS 복습과제/2.캐러셀/캐러셀.html
@@ -10,9 +10,15 @@
 <body>
     <div class="carousel-wrapper">
         <div class="carousel">
-        <img src = "99CBFB3C5AE2934205.jpeg" width="500" height="300">
-        <img src = "99CBFB3C5AE2934205.jpeg" width="500" height="300" >
-        <img src = "99CBFB3C5AE2934205.jpeg" width="500" height="300">
+          <div class="hamster">
+           <img src = "골든햄스터.jpg" width="500" height="300">
+          </div>
+          <div class="hamster">
+            <img src = "골든햄스터.jpg" width="500" height="300">
+           </div>
+           <div class="hamster">
+            <img src = "골든햄스터.jpg" width="500" height="300">
+           </div>
         </div>
     </div>
 
